2010-08-04  Ryan S. Arnold  <rsa@us.ibm.com>

	* configure: Regenerated.
	* configure.ac: Apparently AC_CANONICAL_SYSTEM is only for compilers.
	I removed it, and support for --target.  Now you must use --build
	only.
	* README.developer: Removed directions for using --target.

2010-07-30  Ryan S. Arnold  <rsa@us.ibm.com>

	* sysdeps/powerpc/dfpu/fe_decround.c (stdio.h): Removed unnecessary
	include.

2010-07-30  Ryan S. Arnold  <rsa@us.ibm.com>

	* sysdeps/powerpc/dfpu/fe_decround.c (__fe_dec_getround): The
	structure which defined the DRN was to small and the compiler started
	generating code that wasn't properly extracting the DRN field from the
	structure holding the FPSCR value.  This is fixed.
	* tests/test-round.c: Testcase to prove fe_dec_getround() and
	fe_dec_setround().
	* Makefile.in (libdfp_tests): Added test-round.

2010-07-28  Ryan S. Arnold  <rsa@us.ibm.com>

	* configure: Regenerated.
	* config.log: Removed as unnecessary.
	* configure.ac: --target now works in lieu of --build.  --host is no
	longer necessary.
	* README.developer: Removed directive to use --host and replaced with a
	diective to use --target.

2010-07-26  Ryan S. Arnold  <rsa@us.ibm.com>

	* configure: Regenerated file.
	* Makefile.in: Removed last comments dealing with -mzarch.
	* configure.ac: Removed last fragments dealing with -mzarch.

2010-07-26  Ryan S. Arnold  <rsa@us.ibm.com>

	* ieee754r/isinfd32.c: Removed unnecessary static char buffer used for
	testing.

2010-07-26  Ryan S. Arnold  <rsa@us.ibm.com>

	* ieee754r/isinfd32.c: Removed test-code that shouldn't have been
	checked in.

2010-07-26  Ryan S. Arnold  <rsa@us.ibm.com>

	* ieee754r/isinfd32.c (isinf): Changed Infinity check such that
	DEC_NAN doesn't pass as inf.  There was an incorrect mask check which
	was true for DEC_NAN as well as Inf.
	* tests/test-isfinite.c: Added Conditional expectations for s390 for
	isfinite return values from negative number inputs.


2010-07-23  Ryan S. Arnold  <rsa@us.ibm.com>
